manifests/demo-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-v2
  template:
    metadata:
      labels:
        app: demo-v2
    spec:
      automountServiceAccountToken: false
      containers:
      - name: demo
        image: demo:v2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
            ephemeral-storage: 128Mi
          limits:
            cpu: 200m
            memory: 128Mi
            ephemeral-storage: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: demo-v2
spec:
  selector:
    app: demo-v2
  ports:
  - port: 80
    targetPort: 80
