manifests/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-v1
spec:
  selector:
    app: web
    version: v1
  ports:
  - port: 80
    targetPort: 80
