manifests/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-v2
spec:
  selector:
    app: web
    version: v2
  ports:
  - port: 80
    targetPort: 80
